# badger

./: .coderabbit.yaml  .env.local  .gitignore  CLAUDE.md  README.md  SUPABASE_SETUP.md  dev.sh  package-lock.json  package.json  smoke-test.sh  tailwind.config.js  test-document.txt
.claude/: settings.local.json
.next/: trace
.next/server/: server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
backend/: .env.example  README.md  pyproject.toml
backend/badger/: __init__.py  config.py
backend/badger/api/: server.py
backend/badger/core/: agent.py  chunker.py  graph.py  prompts.py  rag.py  vector_store.py
backend/benchmarks/: judge.py  run.py  test_cases.json
backend/boom/: __init__.py  config.py
backend/boom/api/: __init__.py  server.py
backend/boom/core/: README.md  __init__.py  agent.py  chat.py  chunker.py  documents.py  graph.py  prompts.py  rag.py  storage.py  vector_store.py
backend/reader/: __init__.py  __main__.py  journal.py  mind.py  prompts.py  questions.py  reader.py  reflection.py  rejudge_cc.py  run.py
backend/scripts/: migrate_to_qdrant.py
backend/tests/: conftest.py  test_chunker.py  test_config.py  test_conversation_history.py  test_graph.py  test_prompts.py  test_rag.py  test_server.py  test_smoke.py  test_vector_store.py
frontend/: README.md  package.json  tailwind.config.js
mcp/: README.md
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AgentAssistant.tsx  BookHistory.tsx  ChatPanel.tsx  DocumentViewer.tsx  EpubReader.tsx  FileUploader.tsx  HomeScreen.tsx  ReaderDemo.tsx  (+1 more)
(+50 files in other folders)
