[project]
name = "badger"
version = "0.1.0"
description = "Personal reading assistant with AI capabilities"
requires-python = ">=3.10"

dependencies = [
    # AI
    "anthropic>=0.65.0",
    "voyageai>=0.1.0",
    "langgraph>=0.4.0",

    "rank-bm25>=0.2.2",
    "numpy>=1.24.0",
    "qdrant-client>=1.12.0",

    # Document processing
    "pypdf>=6.0.0",
    "ebooklib>=0.18",

    # API
    "fastapi>=0.116.0",
    "uvicorn>=0.34.0",

    # Utils
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
